--- a/startbootstrap-clean-blog-gh-pages/html/snake.html
+++ b/startbootstrap-clean-blog-gh-pages/html/snake.html
@@ -90,7 +90,7 @@
   <!-- Navbar -->
   <nav class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="education.html">Education</a></li>
       <li class="nav-item"><a class="nav-link" href="experience.html">Experience</a></li>
       <li class="nav-item"><a class="nav-link" href="skills.html">Skills</a></li>
